[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Ui/Main_Ui_Team.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainUI/MainUiTeamContainer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/2_MiscriaMedium_Miscria-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/MainUI/MiscritIcon.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
extra_spacing_space = 1
font_data = ExtResource( 3 )

[node name="MainUiTeamContainer" type="TextureRect"]
margin_left = 84.0
margin_top = 6.0
margin_right = 445.0
margin_bottom = 70.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 64.0
margin_top = 12.0
margin_right = 218.0
margin_bottom = 48.0
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true
}

[node name="Icon" parent="HBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 36.0
margin_bottom = 36.0

[node name="Icon2" parent="HBoxContainer" instance=ExtResource( 4 )]
margin_left = 46.0
margin_top = 0.0
margin_right = 82.0
margin_bottom = 36.0

[node name="Icon3" parent="HBoxContainer" instance=ExtResource( 4 )]
margin_left = 92.0
margin_top = 0.0
margin_right = 128.0
margin_bottom = 36.0

[node name="Icon4" parent="HBoxContainer" instance=ExtResource( 4 )]
margin_left = 138.0
margin_top = 0.0
margin_right = 174.0
margin_bottom = 36.0

[node name="Train" type="TextureButton" parent="."]
margin_left = 311.0
margin_top = 8.0
margin_right = 351.0
margin_bottom = 48.0

[node name="Team" type="TextureButton" parent="."]
margin_left = 257.0
margin_top = 8.0
margin_right = 297.0
margin_bottom = 48.0

[node name="Abi" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -22.0
margin_right = 57.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1

[connection signal="pressed" from="Train" to="." method="_on_Train_pressed"]
[connection signal="pressed" from="Team" to="." method="_on_Team_pressed"]
